--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "ng-zorro-antd": "^13.1.1",
     "prettier": "^2.6.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
