--- a/client/angular.json
+++ b/client/angular.json
@@ -37,7 +37,9 @@
             ],
             "styles": [
               "../node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
-              "src/styles.scss"
+              "../node_modules/firebaseui/dist/firebaseui.css",
+              "src/styles.scss",
+              "src/variables.scss"
             ],
             "scripts": []
           },
