--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
+    "@angular/fire": "^7.3.0",
     "@angular/forms": "~13.3.0",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "crypto-js": "^4.1.1",
+    "firebase": "^9.6.10",
+    "firebaseui": "^6.0.1",
+    "firebaseui-angular": "^6.1.1",
     "ng-zorro-antd": "^13.1.1",
     "prettier": "^2.6.2",
     "rxjs": "~7.5.0",
@@ -46,6 +51,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "lint-staged": "^12.3.7",
+    "sass": "^1.50.0",
     "typescript": "~4.6.2"
   },
   "repository": {
