--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "ng": "node_modules/.bin/ng",
     "start": "node_modules/.bin/ng serve",
-    "build": "node_modules/.bin/ng build",
+    "ci": "echo ci not implemented",
+    "build": "ng build",
     "watch": "node_modules/.bin/ng build --watch --configuration development",
     "test": "node_modules/.bin/ng test",
     "prepare": "husky install"
