--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: ng build
+      - run: npm i && ng build
         working-directory: client
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
