--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "lint-staged": "^12.3.7",
     "sass": "^1.50.0",
-    "typescript": "~4.6.2"
+    "typescript": "~4.6.2",
+    "monaco-editor": "~0.2"
   },
   "repository": {
     "type": "git",
