--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@angular/router": "~13.3.0",
     "@angular/service-worker": "~13.3.0",
     "crypto-js": "^4.1.1",
-    "firebase": "^9.6.10",
+    "firebase": "9.7.0",
     "firebaseui": "^6.0.1",
     "firebaseui-angular": "^6.1.1",
     "ng-zorro-antd": "~13.2",
@@ -54,9 +54,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "lint-staged": "^12.3.7",
+    "monaco-editor": "~0.33",
     "sass": "^1.50.0",
-    "typescript": "~4.6.4",
-    "monaco-editor": "~0.33"
+    "typescript": "~4.6.4"
   },
   "repository": {
     "type": "git",
